hphp/hack/test/typecheck/shape_usage_with_optional_field.php.constraint_method_call.exp
ERROR: File "shape_usage_with_optional_field.php", line 4, characters 3-12:
Optional field syntax `?` is only valid in shape destructuring patterns (Parsing[1002])
ERROR: File "shape_usage_with_optional_field.php", line 4, characters 3-12:
Shape field name must be a nonempty single-quoted string or a class constant (Parsing[1002])
ERROR: File "shape_usage_with_optional_field.php", line 3, characters 1-27:
Hack does not support top level statements. Use the `__EntryPoint` attribute on a function instead (Naming[2128])
